--- a/workflows/semantic-release__push.yml
+++ b/workflows/semantic-release__push.yml
@@ -1,8 +1,9 @@
 name: semantic-release (04:30)
 
 on:
-  schedule:
-    - cron: '30 4 * * *'
+  push:
+    branches:
+      - master
   repository_dispatch:
     types:
       - docker-base-image-check
