added new namings and new timings

--- a/workflows/yarn-upgrade__0*630.yml
+++ b/workflows/yarn-upgrade__0*630.yml
@@ -1,8 +1,8 @@
-name: yarn-upgrade (hourly)
+name: yarn-upgrade (30 */6 * * *)
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 */6 * * *'
 
 jobs:
   yarn-upgrade:
