--- a/workflows/docker-hub/docker-base-image-check-hub__0*630.yml
+++ b/workflows/docker-hub/docker-base-image-check-hub__0*630.yml
@@ -1,8 +1,8 @@
-name: docker-base-image-check (hourly)
+name: docker-base-image-check-hub (30 */6 * * *)
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 */6 * * *'
 
 jobs:
   check:
@@ -12,16 +12,15 @@ jobs:
       - uses: actions/checkout@master
 
       - run: echo ::set-env name=BASE_IMAGE::$(cat Dockerfile | awk '{ if ($1=="FROM") print $2 }' | tail -n 1)
-      - run: echo ::set-env name=IMAGE::$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")
 
-      - run: docker login -u ${{ github.repository_owner }} -p ${{ github.token }} docker.pkg.github.com
+      - run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
 
       - run: |
           wget https://raw.githubusercontent.com/bamdadsabbagh/docker-base-image-check/master/src/check.sh
           chmod +x check.sh
 
       - run: |
-          if ./check.sh ${{ env.BASE_IMAGE }} docker.pkg.github.com/${{ github.repository }}/${{ env.IMAGE }}:latest; then
+          if ./check.sh ${{ env.BASE_IMAGE }} ${{ secrets.DOCKER_REPO }}:latest; then
             echo ::set-env name=IS_UP_TO_DATE::'true'
           else
             echo ::set-env name=IS_UP_TO_DATE::'false'
