--- a/workflows/docker-gpr/docker-base-image-check-gpr__0*100.yml
+++ b/workflows/docker-gpr/docker-base-image-check-gpr__0*100.yml
@@ -1,4 +1,4 @@
-name: docker-base-image-check-gpr (0 * * * *)
+name: docker-base-image-check-gpr__0*100
 
 on:
   schedule:
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: auto docker-base-image-check"
+          git commit --allow-empty -m "🐳 fix: asfalte: docker-base-image-check-gpr__0*100"
           git push
 
       - if: env.IS_UP_TO_DATE != 'true'
