--- a/workflows/docker-hub/docker-base-image-check-hub__0*630.yml
+++ b/workflows/docker-hub/docker-base-image-check-hub__0*630.yml
@@ -1,4 +1,4 @@
-name: docker-base-image-check-hub (30 */6 * * *)
+name: docker-base-image-check-hub__0*630
 
 on:
   schedule:
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: auto docker-base-image-check"
+          git commit --allow-empty -m "🐳 fix: asfalte: docker-base-image-check-hub__0*630"
           git push
 
       - if: env.IS_UP_TO_DATE != 'true'
