--- a/workflows/docker-hub/docker-base-image-check-hub__0*100.yml
+++ b/workflows/docker-hub/docker-base-image-check-hub__0*100.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "🐳 fix: asfalte: docker-base-image-check-hub__0*100"
+          git commit --allow-empty -m "fix: asfalte: 🐳 docker-base-image-check-hub__0*100"
           git push
 
       - if: env.IS_UP_TO_DATE != 'true'
