--- a/workflows/lftp/lftp-remote-to-host__mondays.yml
+++ b/workflows/lftp/lftp-remote-to-host__mondays.yml
@@ -29,6 +29,6 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "🖋 fix: asfalte: lftp-remote-to-host__mondays"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: 🖋 lftp-remote-to-host__mondays"
       
       - run: git push
