--- a/workflows/semantic-release/semantic-release__0230.yml
+++ b/workflows/semantic-release/semantic-release__0230.yml
@@ -20,10 +20,22 @@ jobs:
           node-version: '12'
 
       - run: yarn
-      
-      - run: npm install -g semantic-release @semantic-release/github @semantic-release/git
 
+      - run: |
+          npm install -g \
+            semantic-release \
+            @semantic-release/github \
+            @semantic-release/git \
+            @semantic-release/exec \
+            @semantic-release/changelog \
+            @semantic-release/npm \
+            semantic-release-chrome \
+            semantic-release-firefox-add-on \
+            aggregate-error
+        
       - run: semantic-release
         env:
-          GH_TOKEN: ${{ secrets.PAT }} # repo scoped token
+          GH_TOKEN: ${{ secrets.PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          FIREFOX_API_KEY: ${{ secrets.FIREFOX_API_KEY }}
+          FIREFOX_SECRET_KEY: ${{ secrets.FIREFOX_SECRET_KEY }}
