--- a/workflows/yarn-upgrade/yarn-upgrade__0x630.yml
+++ b/workflows/yarn-upgrade/yarn-upgrade__0x630.yml
@@ -1,8 +1,8 @@
-name: yarn-upgrade__0*100
+name: yarn-upgrade__0x630
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 */6 * * *'
 
 jobs:
   yarn-upgrade:
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade__0*100"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade__0x630"
 
       - run: git push
 
