--- a/workflows/yarn-upgrade/yarn-upgrade-latest__0x630.yml
+++ b/workflows/yarn-upgrade/yarn-upgrade-latest__0x630.yml
@@ -1,8 +1,8 @@
-name: yarn-upgrade__0x100
+name: yarn-upgrade-latest__0x630
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 */6 * * *'
 
 jobs:
   yarn-upgrade:
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '12'
 
-      - run: yarn upgrade
+      - run: yarn upgrade --latest
 
       - run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade__0x100"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade-latest__0x630"
 
       - run: git push
 
