--- a/workflows/semantic-release/semantic-release-with-build__0430.yml
+++ b/workflows/semantic-release/semantic-release-with-build__0430.yml
@@ -33,7 +33,8 @@ jobs:
             @semantic-release/npm \
             semantic-release-chrome \
             semantic-release-firefox-add-on \
-            aggregate-error
+            aggregate-error \
+            sign-addon
         
       - run: semantic-release
         env:
@@ -41,3 +42,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           FIREFOX_API_KEY: ${{ secrets.FIREFOX_API_KEY }}
           FIREFOX_SECRET_KEY: ${{ secrets.FIREFOX_SECRET_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
