fixed `semantic-release-firefox-add-on@0.2.6` and `ubuntu-18.04`

--- a/workflows/semantic-release/semantic-release-with-build__0430.yml
+++ b/workflows/semantic-release/semantic-release-with-build__0430.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   semantic-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
 
       - uses: actions/checkout@master
@@ -32,9 +32,8 @@ jobs:
             @semantic-release/changelog \
             @semantic-release/npm \
             semantic-release-chrome \
-            semantic-release-firefox-add-on \
-            aggregate-error \
-            sign-addon
+            semantic-release-firefox-add-on@0.2.6 \
+            aggregate-error
         
       - run: semantic-release
         env:
