new naming convention

--- a/workflows/docker-gpr/docker-build-push-gpr-v2--onPublished.yml
+++ b/workflows/docker-gpr/docker-build-push-gpr-v2--onPublished.yml
@@ -1,4 +1,4 @@
-name: docker-build-push-gpr-v2__published
+name: docker-build-push-gpr-v2--onPublished
 
 on:
   release:
@@ -6,7 +6,7 @@ on:
       - published
 
 jobs:
-  docker-build-push-gpr:
+  docker-build-push-gpr-v2--onPublished:
     runs-on: ubuntu-latest 
     steps:
 
