--- a/workflows/npm/npm-update--0x130.yml
+++ b/workflows/npm/npm-update--0x130.yml
@@ -1,12 +1,11 @@
-name: yarn-lint__push
+name: npm-update--0x130
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '30 * * * *' every hour and a half
 
 jobs:
-  yarn-lint:
+  npm-update--0x130:
     runs-on: ubuntu-latest
     steps:
 
@@ -16,9 +15,7 @@ jobs:
         with:
           node-version: '12'
 
-      - run: yarn
-
-      - run: yarn lint
+      - run: npm update --legacy-peer-deps
 
       - run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
@@ -26,6 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: 🔧 yarn-lint__push"
-      
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ npm-update--0x130"
+
       - run: git push
+
