--- a/workflows/docker-gpr/docker-build-push-gpr--onPublished.yml
+++ b/workflows/docker-gpr/docker-build-push-gpr--onPublished.yml
@@ -1,4 +1,4 @@
-name: docker-build-push-gpr-v1__published
+name: docker-build-push-gpr--onPublished
 
 on:
   release:
@@ -6,15 +6,15 @@ on:
       - published
 
 jobs:
-  docker-build-push-gpr:
+  docker-build-push-gpr--onPublished:
     runs-on: ubuntu-latest 
     steps:
 
-      - run: echo "IMAGE=$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")" >> $GITHUB_ENV
+      - run: echo ::set-env name=IMAGE::$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")
 
       - uses: actions/checkout@master
 
-      - uses: docker/build-push-action@v1
+      - uses: docker/build-push-action@master
         with:
           registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
