--- a/workflows/docker-hub/docker-base-image-check-hub--0x100.yml
+++ b/workflows/docker-hub/docker-base-image-check-hub--0x100.yml
@@ -1,11 +1,11 @@
-name: docker-base-image-check-hub__0x100
+name: docker-base-image-check-hub--0x100
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * *' # every hour
 
 jobs:
-  check:
+  docker-base-image-check-hub--0x100:
     runs-on: ubuntu-latest
     steps:
 
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: 🐳 docker-base-image-check-hub__0x100"
+          git commit --allow-empty -m "fix: asfalte: 🐳 docker-base-image-check-hub--0x100"
           git push
 
       - if: env.IS_UP_TO_DATE != 'true'
