--- a/workflows/yarn-upgrade/yarn-upgrade--0x130.yml
+++ b/workflows/yarn-upgrade/yarn-upgrade--0x130.yml
@@ -1,11 +1,11 @@
-name: yarn-upgrade__0x100
+name: yarn-upgrade--0x130
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 * * * *' # every hour and a half
 
 jobs:
-  yarn-upgrade:
+  yarn-upgrade--0x130:
     runs-on: ubuntu-latest
     steps:
 
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade__0x100"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade--0x130"
 
       - run: git push
 
