--- a/workflows/yarn-upgrade/yarn-upgrade--0x630.yml
+++ b/workflows/yarn-upgrade/yarn-upgrade--0x630.yml
@@ -1,11 +1,11 @@
-name: yarn-upgrade-latest__0x630
+name: yarn-upgrade--0x630
 
 on:
   schedule:
-    - cron: '30 */6 * * *'
+    - cron: '30 */6 * * *' # every six hours and a half
 
 jobs:
-  yarn-upgrade:
+  yarn-upgrade--0x630:
     runs-on: ubuntu-latest
     steps:
 
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '12'
 
-      - run: yarn upgrade --latest
+      - run: yarn upgrade
 
       - run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade-latest__0x630"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade--0x630"
 
       - run: git push
 
