--- a/workflows/yarn-upgrade/yarn-upgrade-latest--0x630.yml
+++ b/workflows/yarn-upgrade/yarn-upgrade-latest--0x630.yml
@@ -1,11 +1,11 @@
-name: yarn-upgrade-latest__0x100
+name: yarn-upgrade-latest--0x630
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '30 */6 * * *' # every six hours and a half
 
 jobs:
-  yarn-upgrade:
+  yarn-upgrade-latest--0x630:
     runs-on: ubuntu-latest
     steps:
 
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade-latest__0x100"
+          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade-latest--0x630"
 
       - run: git push
 
