--- a/workflows/docker/hub/base-image-check/docker-hub-base-image-check--0x100.yml
+++ b/workflows/docker/hub/base-image-check/docker-hub-base-image-check--0x100.yml
@@ -1,11 +1,11 @@
-name: docker-base-image-check-hub--0x630
+name: docker-hub-base-image-check--0x100
 
 on:
   schedule:
-    - cron: '30 */6 * * *' # every six hours and a half
+    - cron: '0 * * * *' # every hour
 
 jobs:
-  docker-base-image-check-hub--0x630:
+  docker-hub-base-image-check--0x100:
     runs-on: ubuntu-latest
     steps:
 
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: 🐳 docker-base-image-check-hub--0x630"
+          git commit --allow-empty -m "fix: asfalte: 🐳 docker-hub-base-image-check--0x100"
           git push
 
       - if: env.IS_UP_TO_DATE != 'true'
