--- a/workflows/npm/npm-update--0x100.yml
+++ b/workflows/npm/npm-update--0x100.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           node-version: '12'
 
-      - run: npm update --legacy-peer-deps
+      - run: |
+          npm i --legacy-peer-deps
+          npm update --legacy-peer-deps
 
       - run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
@@ -26,3 +28,4 @@ jobs:
           git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ npm-update--0x100"
 
       - run: git push
+
