--- a/workflows/bamdadsabbagh/deploy-ftp--onPublished.yml
+++ b/workflows/bamdadsabbagh/deploy-ftp--onPublished.yml
@@ -1,4 +1,4 @@
-name: ftp-mirror--onPublished
+name: deploy-ftp--onPublished
 
 on:
   release:
@@ -6,15 +6,15 @@ on:
       - published
 
 jobs:
-  ftp-mirror--onPublished:
+  deploy-ftp--onPublished:
     runs-on: ubuntu-latest
     steps:
 
       - uses: actions/checkout@master
 
-      - uses: bamdadsabbagh/action-ftp-mirror@master
+      - uses: bamdadsabbagh/action-deploy-ftp@master
         with:
           FTP_HOST: ${{ secrets.FTP_HOST }}
           FTP_USER: ${{ secrets.FTP_USER }}
           FTP_PASS: ${{ secrets.FTP_PASS }}
-          PATH_LOCAL: './src'
+          PATH_LOCAL: 'src'
