--- a/workflows/docker/gpr/base-image-check/docker-gpr-base-image-check--0x630.yml
+++ b/workflows/docker/gpr/base-image-check/docker-gpr-base-image-check--0x630.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: 🐳 docker-gpr-base-image-check--0x630"
+          git commit --allow-empty -m "fix(asfalte): 🐳 docker-gpr-base-image-check--0x630"
           git push
 
       - if: ${{ env.IS_OUT_OF_DATE == 'true' }}
