better commits from `asfalte`

--- a/workflows/docker/hub/base-image-check/docker-hub-base-image-check--0x630.yml
+++ b/workflows/docker/hub/base-image-check/docker-hub-base-image-check--0x630.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.email "asfalte@bamdadsabbagh.com"
           git config --global user.name "asfalte"
-          git commit --allow-empty -m "fix: asfalte: 🐳 docker-hub-base-image-check--0x630"
+          git commit --allow-empty -m "fix(asfalte): 🐳 docker-hub-base-image-check--0x630"
           git push
 
       - if: ${{ env.IS_OUT_OF_DATE == 'true' }}
