--- a/workflows/npm/npm-update--0x100.yml
+++ b/workflows/npm/npm-update--0x100.yml
@@ -25,7 +25,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ npm-update--0x100"
+          git diff-index --quiet HEAD || git commit -m "fix(asfalte): ⚙️ npm-update--0x100"
 
       - run: git push
 
