--- a/workflows/yarn/lint/yarn-lint--onPush.yml
+++ b/workflows/yarn/lint/yarn-lint--onPush.yml
@@ -26,6 +26,6 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: 🔧 yarn-lint--onPush"
+          git diff-index --quiet HEAD || git commit -m "fix(asfalte): 🔧 yarn-lint--onPush"
       
       - run: git push
