--- a/workflows/yarn/upgrade-latest/yarn-upgrade-latest--0x630.yml
+++ b/workflows/yarn/upgrade-latest/yarn-upgrade-latest--0x630.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade-latest--0x630"
+          git diff-index --quiet HEAD || git commit -m "fix(asfalte): ⚙️ yarn-upgrade-latest--0x630"
 
       - run: git push
 
