--- a/workflows/yarn/upgrade/yarn-upgrade--0x130.yml
+++ b/workflows/yarn/upgrade/yarn-upgrade--0x130.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           git add .
-          git diff-index --quiet HEAD || git commit -m "fix: asfalte: ⚙️ yarn-upgrade--0x130"
+          git diff-index --quiet HEAD || git commit -m "fix(asfalte): ⚙️ yarn-upgrade--0x130"
 
       - run: git push
 
