--- a/workflows/semantic-release/npm/semantic-release-npm--onDockerBaseImageCheck.yml
+++ b/workflows/semantic-release/npm/semantic-release-npm--onDockerBaseImageCheck.yml
@@ -1,12 +1,12 @@
-name: semantic-release--onPush
+name: semantic-release-yarn--onDockerBaseImageCheck
 
 on:
-  push:
-    branches:
-      - master
+  repository_dispatch:
+    types:
+      - docker-base-image-check
 
 jobs:
-  semantic-release--onPush:
+  semantic-release-yarn--onDockerBaseImageCheck:
     runs-on: ubuntu-latest
     steps:
 
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '14'
+
+      - run: npm i --legacy-peer-deps
 
       - run: |
           npm install -g \
