--- a/workflows/semantic-release/npm/semantic-release-npm--onPush.yml
+++ b/workflows/semantic-release/npm/semantic-release-npm--onPush.yml
@@ -1,4 +1,4 @@
-name: semantic-release--onPush
+name: semantic-release-yarn--onPush
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  semantic-release--onPush:
+  semantic-release-yarn--onPush:
     runs-on: ubuntu-latest
     steps:
 
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '14'
+
+      - run: npm i --legacy-peer-deps
 
       - run: |
           npm install -g \
