--- a/workflows/semantic-release/yarn-with-build/semantic-release-yarn-with-build--onDockerBaseImageCheck.yml
+++ b/workflows/semantic-release/yarn-with-build/semantic-release-yarn-with-build--onDockerBaseImageCheck.yml
@@ -1,11 +1,12 @@
-name: semantic-release-yarn--onMondays-1030
+name: semantic-release-yarn-with-build--onDockerBaseImageCheck
 
 on:
-  schedule:
-    - cron: '30 10 * * 1' # every monday at 1030
+  repository_dispatch:
+    types:
+      - docker-base-image-check
 
 jobs:
-  semantic-release-yarn--onMondays-1030:
+  semantic-release-yarn-with-build--onDockerBaseImageCheck:
     runs-on: ubuntu-latest
     steps:
 
@@ -15,7 +16,9 @@ jobs:
         with:
           node-version: '14'
 
-      - run: npm i --legacy-peer-deps
+      - run: yarn
+
+      - run: yarn build
 
       - run: |
           npm install -g \
@@ -35,3 +38,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           FIREFOX_API_KEY: ${{ secrets.FIREFOX_API_KEY }}
           FIREFOX_SECRET_KEY: ${{ secrets.FIREFOX_SECRET_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
